Fix image creation on smaller devices Remove scaling of Decorations

--- a/resources/index.css
+++ b/resources/index.css
@@ -280,6 +280,7 @@ input.error {
 .preview-decorations video {
 	@apply transform-gpu;
 	transform-origin: top left;
+	max-width: none;
 }
 
 .decorations {
